fixed resume parent/child issues, vastly improved flex handling of screen min/maxing, changed most spacing back to 'rem' for better dynamic changes

--- a/src/pages/MeStyle.css
+++ b/src/pages/MeStyle.css
@@ -39,6 +39,7 @@ html {
   background-color: var(--lightPrimary);
   height: 100vh;
   min-height: 500px;
+  overflow: scroll;
 
   h1,
   h2,
@@ -55,7 +56,7 @@ html {
   }
 
   h2 {
-    margin-top: 7vh;
+    margin-top: 3.5rem;
     font-weight: 400;
     font-size: 35px;
     color: var(--greenPrimary);
@@ -100,7 +101,6 @@ html {
   /* Thumb color and track color */
 }
 
-
 .portfolio-page.dark-mode {
   background-color: var(--gray-900);
   color: var(--gray-200);
@@ -120,7 +120,7 @@ html {
 }
 
 .main-column-B {
-  padding: 2vh 3vh 2vh 2vh;
+  padding: 1rem 1.5rem 1rem 1rem;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -128,14 +128,40 @@ html {
   overflow-x: hidden;
   border-inline: 2px solid var(--greenPrimary);
 
-  .skills p {
-    margin: 0;
+  #proficiencies {
+    max-width: 1200px;
+
+    #prof-table {
+      display: flex;
+      flex-wrap: wrap;
+      transition: all 1s ease; /* Smooth transition on changes */
+
+      .skills p {
+        margin: 0;
+      }
+
+      #language-col {
+        flex: 1;
+        flex-direction: row;
+        margin-right: 1rem;
+        border: 1px solid var(--lightPrimary);
+        min-width: 40%;
+        transition: all 1s ease;
+      }
+
+      #skills-col {
+        flex: 1;
+        flex-direction: row;
+        min-width: max(60%, 355px);
+        transition: all 1s ease;
+      }
+    }
   }
 
   .error {
     display: flex;
     margin: 0;
-    padding: 2vh;
+    padding: 1rem;
   }
 }
 
@@ -167,7 +193,8 @@ html {
     border-right: 2px solid var(--greenPrimary);
     transition: all 1s ease;
 
-    section p, section div{
+    section p,
+    section div {
       flex: 0;
       min-width: 250px;
       overflow-x: hidden;
@@ -201,7 +228,7 @@ html {
 }
 
 #intro {
-  padding: 2vh 3vh 0 3vh;
+  padding: 1rem 1.5rem 0 1.5rem;
 }
 
 #dark-mode-btn,
@@ -219,6 +246,8 @@ html {
 /* SideBar Comp */
 .side-bar-column {
   display: flex;
+  max-width: 14%;
+  min-width: max(calc(200px), 14%);
 }
 
 /* ScrollTo Comp */
@@ -231,9 +260,9 @@ html {
 /* Card Comp */
 .portfolio-page {
   .card-section {
-    margin: 3vh 1vw 3vh 1vw;
+    margin: 1.5rem .5rem 1.5rem .5rem;
     background-color: var(--purple-800);
-    width: 80%;
+    width: max(425px, 80%);
     line-height: 1.2;
 
     .card-title {
@@ -257,22 +286,6 @@ html {
   color: var(--gray-200);
 }
 
-.title-row {
-  display: flex;
-  justify-content: space-between;
-
-  #language-title {
-    color: inherit;
-    max-width: 40%;
-  }
-
-  #skills-title {
-    color: inherit;
-    padding-left: 1vh;
-    min-width: 60%;
-  }
-}
-
 .thin-content p {
   font-size: 13px;
   font-weight: 300 !important;
@@ -283,18 +296,18 @@ html {
 }
 
 .project-group {
-  margin-block: 2vh;
+  margin-block: 1rem;
 
   .project-link {
     display: flex;
-    margin-bottom: 1vh;
+    margin-bottom: 0.5rem;
     background-color: var(--gray-750);
     border-radius: 0.375rem;
     cursor: pointer;
     width: 48%;
 
     .thin-title {
-      padding: 2vh 0 1.5vh 2vh;
+      padding: 1rem 0 .75rem 2rem;
       flex: 1;
       text-decoration: none;
     }
@@ -323,8 +336,8 @@ html {
 
   .shield {
     img {
-      margin-right: 1vh;
-      margin-bottom: 1vh;
+      margin-right: 0.5rem;
+      margin-bottom: 0.5rem;
       padding: 0;
       width: auto;
       height: 30px;
